--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ WORDPRESS_WEBHOOK_SECRET="your-secret-key-here"
 
 # If using the revalidate plugin
 # You can generate by running `openssl rand -base64 32` in the terminal
+EMAIL_USER="your-email@example.com"
+EMAIL_PASS="your-email-password"
+EMAIL_TO="recipient@example.com"
