--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "wp.config.ts"
-  ],
+, "utils/send-email.js"  ],
   "exclude": [
     "node_modules"
   ]
